tests/base/invalid/VarDecl_CompileFail_4.whiley
import * from whiley.lang.*

void ::main(System sys,[string] args):
    x = y
    sys.out.println(toString(x))
